<resources>
    <string name="app_name">Tastify</string>
    <string name="user_name_or_email">User Name or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="craete_account">Craete Account?</string>
    <string name="google">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_register_with">or Register with</string>
    <string name="meal_title">Meal title</string>
    <string name="what_do_you_want_to_cook_today">What do you want to cook today?</string>
    <string name="hello_chef">Hello Chef !</string>
    <string name="suggested_meal">Suggested meal</string>
    <string name="ingrediants">Ingrediants</string>
    <string name="title">Title</string>
    <string name="space" />
    <string name="read_more">Read More</string>
    <string name="your_favorite_recipes_chef">Your Favorite Recipes, Chef!</string>
    <string name="are_you_sure">are you sure</string>
    <string name="confirm_the_process">confirm the process</string>
    <string name="add_to_favorits">Add to Favorits</string>
    <string name="logout">Logout</string>
    <string name="firebase_cient_id">817769974362-2uvbn0rkae5aspg25l5p17mcbpcskj9p.apps.googleusercontent.com</string>
    <string name="you_are_offline_please_check_your_connection">You are offline. Please check your connection.</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="confirm_password">Confirm password</string>
</resources>