<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70B9BE">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:foregroundGravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/registeration_lottie" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameEditTextLogIn"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:background="@drawable/text_input_background"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sofia_pro_regular_az"
        android:hint="@string/user_name_or_email"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#042628"
        android:fontFamily="@font/sofia_prom_edium_az"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLogIn"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLogIn"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordEditTextLogIn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordEditTextLogIn"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_input_background"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sofia_pro_regular_az"
        android:hint="@string/password"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditTextLogIn"
        app:layout_constraintStart_toStartOf="@+id/userNameEditTextLogIn"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditTextLogIn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/rePasswordEditTextLogIn"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_input_background"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sofia_pro_regular_az"
        android:hint="@string/password"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLogIn"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLogIn"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLogIn" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="30dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sofia_pro_light_az"
        android:gravity="center"
        android:text="@string/or_register_with"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginButtonWithGoogle"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawable="@drawable/google_color_svgrepo_com"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sofia_prom_edium_az"
        android:text="@string/google"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLogIn"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLogIn"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider1"
        android:layout_width="110dp"
        android:layout_height="1dp"
        android:background="@drawable/custom_divider"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="110dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_divider"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia_pro_black_az"
        android:text="@string/already_have_an_account"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        android:drawablePadding="20dp"
        android:fontFamily="@font/sofia_pro_regular_az"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lottieAnimationView2" />

</androidx.constraintlayout.widget.ConstraintLayout>