<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DetailsMealFragment">


    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="439dp"
        android:layout_height="390dp"
        android:adjustViewBounds="true"
        android:background="@drawable/image_background"
        android:scaleType="centerCrop"
        android:src="@drawable/custom_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/icon_background"
        android:src="@drawable/heart_shape_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipeImage" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                            android:id="@+id/videoView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/image_background"
                            android:backgroundTint="@color/white"
                            app:videoId=""
                            app:autoPlay="false"
                            handleNetworkEvents="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tittleMealDetails"
                    android:layout_width="331dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="56dp"
                    android:fontFamily="@font/sofia_pro_bold_az"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mealDescription"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/sofia_prom_edium_az"
                    android:maxLines="3"
                    android:text="@string/space"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/tittleMealDetails"
                    app:layout_constraintStart_toStartOf="@+id/tittleMealDetails"
                    app:layout_constraintTop_toBottomOf="@+id/tittleMealDetails" />


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:src="@drawable/cutegory_icon"
                    app:layout_constraintStart_toStartOf="@+id/mealDescription"
                    app:layout_constraintTop_toBottomOf="@+id/mealDescription" />

                <TextView
                    android:id="@+id/recipeCategory"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text=" "
                    app:layout_constraintBottom_toBottomOf="@+id/areaText"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="153dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="92dp"
                    android:fontFamily="@font/sofia_pro_bold_az"
                    android:text="@string/ingrediants"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/mealDescription" />

                <TextView
                    android:id="@+id/ingredientsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/ingredients"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="85dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="28dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="25dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/ingredientsCount" />

                <TextView
                    android:id="@+id/readMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofia_pro_medium_ltalic_az"
                    android:text="@string/read_more"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/mealDescription"
                    app:layout_constraintTop_toBottomOf="@+id/mealDescription" />

                <ImageView
                    android:id="@+id/areaImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="112dp"
                    android:background="@drawable/area_background"
                    android:src="@drawable/area_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView6"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/areaText"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:text=" "
                    app:layout_constraintBottom_toBottomOf="@+id/areaImageView"
                    app:layout_constraintStart_toEndOf="@+id/areaImageView" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>